<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:text="@string/lateral_metodo"
            android:textSize="@dimen/titulos" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/cbTipoPago" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="15">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/btn_add_metodo_pago" />

        </FrameLayout>

    </LinearLayout>

    <View
        android:id="@+id/firstDivider"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="#6b6b6b" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:text="@string/tv_comprobante"
            android:textSize="@dimen/titulos" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/cbTipoComprobante" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="15">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/btn_add_comprobante_pago" />

        </FrameLayout>


    </LinearLayout>

</LinearLayout>