<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondolog"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pe.area51.proyecto.RegisterUserActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtTittleRegiter"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tmnTittle"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etRegisNombre_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/etRegisNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtNombre"
                android:inputType="textCapSentences"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/etRegisApe_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/etRegisApe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtApellido"
                android:inputType="textCapSentences"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etRegisCorreo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/etRegisCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtCorreo"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etRegisMovil_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/etRegisMovil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtTelefono"
                android:inputType="phone"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etRegisUser_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/etRegisUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtUser"
                android:inputType="text"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etRegisPass_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/etRegisPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtPassWord"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etRegisRePase_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/etRegisRePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtRePassWord"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:background="@color/fondButton"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/txtBtnRegistrate"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txtRegis"
            android:textStyle="bold" />

    </FrameLayout>

</LinearLayout>
